fixed ANdroid 12 issue -> can be used on Android v.12 now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         <activity android:name=".AddIngredients"></activity>
         <activity android:name=".ScaleIngredients"></activity>
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
